tests/xml/invalidxml/obsTime/badtime.xml.README
badtime.xml: BAD because obsTime must end in Z
